# NetSentry

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  run.py  start.bat  start.sh  start.vbs
config/: settings.json
config/threats/: threat_db.json
core/: __init__.py  monitor.py  process_info.py
core/threats/: __init__.py  __init__.py.bak
ui/: __init__.py  main_window.py  styles.py
utils/: __init__.py  formatters.py  geoip.py
